# ouroboros

./: .gitignore  Cargo.toml  README.md
migrations/: 20260605114148_create_users_table.sql
src/: main.rs  state.rs
src/auth/: password.rs
src/handlers/: health.rs  mod.rs  task.rs  user.rs
src/models/: user.rs
src/repositories/: user_repo.rs
src/schemas/: task_schema.rs  user_schema.rs
