[package]
name = "ouroboros"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-native-tls", "postgres","uuid","chrono"] }
axum="0.8"
tokio={version="1",features=["full"]}
serde={version="1.0",features=["derive"]}
dotenvy = "0.15"
serde_json = "1.0"
uuid= {version="1.0",features=["v4","serde"]}
chrono={version="0.4",features=["serde"]}